Categoies Feature completed

--- a/src/components/common/nav/categories.module.css
+++ b/src/components/common/nav/categories.module.css
@@ -21,9 +21,10 @@
     box-sizing: border-box;
     background-color: #f5f6f7;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    width: 150px;
+    width: 180px;
     border-radius: 0.5rem;
     display: none;
+    text-transform: capitalize;
 }
 
 .items li:not(:first-child) {
